--- a/Area/Admin/Views/Transactions/index.twig
+++ b/Area/Admin/Views/Transactions/index.twig
@@ -33,24 +33,26 @@
          <div class="row top_tiles">
              <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
                  <div class="tile-stats">
-                     <div class="icon"><i class="fa fa-sort-numeric-asc"></i></div>
-                     <div class="count">179</div>
-                     <h3>Sales #</h3>
-                     <p>Total number of sales</p>
+                     <div class="icon"><i class="fa fa-sort-amount-desc"></i></div>
+                     <div class="count">{{ '{{ transaction_stats.transaction_count }}' }}</div>
+                     <h3>Transactions #</h3>
+                     <p>Total number of transactions</p>
                  </div>
              </div>
              <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
                  <div class="tile-stats">
                      <div class="icon"><i class="fa fa-money"></i></div>
-                     <div class="count">$179</div>
-                     <h3>Revenue</h3>
-                     <p>Total revenue after sales and refunds</p>
+                     <div class="count">{{ '{{ transaction_stats.sales_num }}' }}</div>
+                     <h3>
+                         Sales
+                     </h3>
+                     <p>Total Sales</p>
                  </div>
              </div>
              <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
                  <div class="tile-stats">
                      <div class="icon"><i class="fa fa-thumbs-o-up"></i></div>
-                     <div class="count">$179</div>
+                     <div class="count">${{ '{{ transaction_stats.sales }}' }}</div>
                      <h3>Sales</h3>
                      <p>Total sales</p>
                  </div>
@@ -58,7 +60,7 @@
              <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
                  <div class="tile-stats">
                      <div class="icon"><i class="fa fa-thumbs-o-down"></i></div>
-                     <div class="count">$179</div>
+                     <div class="count">-${{ '{{ transaction_stats.refunds * (-1) }}' }}</div>
                      <h3>Refunds</h3>
                      <p>Total refunds</p>
                  </div>
@@ -130,12 +132,18 @@
 
                          </div>
 
+                         <!-- today's transactions -->
                          <div class="col-md-3 col-sm-12 col-xs-12">
                              <div>
                                  <div class="x_title">
                                      <h2>Today Transactions</h2>
                                      <div class="clearfix"></div>
                                  </div>
+
+                                 <div class="alert alert-warning" v-if="today_transactions.length == 0">
+                                      No yet transactions for today
+                                 </div>
+
                                  <ul class="list-unstyled top_profiles scroll-view">
 
                                      <li class="media event" v-for="today_transac in today_transactions">
@@ -149,62 +157,6 @@
                                              {#<p> <small>12 Sales Today</small></p>#}
                                          </div>
                                      </li>
-
-                                     {#<li class="media event">#}
-                                         {#<a class="pull-left border-aero profile_thumb">#}
-                                             {#<i class="fa fa-user aero"></i>#}
-                                         {#</a>#}
-                                         {#<div class="media-body">#}
-                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
-                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
-                                             {#<p> <small>12 Sales Today</small>#}
-                                             {#</p>#}
-                                         {#</div>#}
-                                     {#</li>#}
-                                     {#<li class="media event">#}
-                                         {#<a class="pull-left border-green profile_thumb">#}
-                                             {#<i class="fa fa-user green"></i>#}
-                                         {#</a>#}
-                                         {#<div class="media-body">#}
-                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
-                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
-                                             {#<p> <small>12 Sales Today</small>#}
-                                             {#</p>#}
-                                         {#</div>#}
-                                     {#</li>#}
-                                     {#<li class="media event">#}
-                                         {#<a class="pull-left border-blue profile_thumb">#}
-                                             {#<i class="fa fa-user blue"></i>#}
-                                         {#</a>#}
-                                         {#<div class="media-body">#}
-                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
-                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
-                                             {#<p> <small>12 Sales Today</small>#}
-                                             {#</p>#}
-                                         {#</div>#}
-                                     {#</li>#}
-                                     {#<li class="media event">#}
-                                         {#<a class="pull-left border-aero profile_thumb">#}
-                                             {#<i class="fa fa-user aero"></i>#}
-                                         {#</a>#}
-                                         {#<div class="media-body">#}
-                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
-                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
-                                             {#<p> <small>12 Sales Today</small>#}
-                                             {#</p>#}
-                                         {#</div>#}
-                                     {#</li>#}
-                                     {#<li class="media event">#}
-                                         {#<a class="pull-left border-green profile_thumb">#}
-                                             {#<i class="fa fa-user green"></i>#}
-                                         {#</a>#}
-                                         {#<div class="media-body">#}
-                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
-                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
-                                             {#<p> <small>12 Sales Today</small>#}
-                                             {#</p>#}
-                                         {#</div>#}
-                                     {#</li>#}
                                  </ul>
                              </div>
                          </div>
@@ -214,7 +166,7 @@
              </div>
          </div>
 
-         <div class="row">
+         <div class="row" v-if="transactions.length > 0">
              <div class="col-md-12 col-sm-12 col-xs-12">
                  <div class="x_panel">
                      <div class="x_title">
@@ -224,11 +176,7 @@
 
                      <div class="x_content">
 
-                         <div class="alert alert-success" role="alert" v-if="transactions.length == 0">
-                             Sorry but there no transactions at the moment
-                         </div>
-
-                         <div class="table-responsive" v-if="transactions.length > 0">
+                         <div class="table-responsive">
                              <table class="table table-striped jambo_table">
                                  <thead>
                                  <tr class="headings">
